--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -1,7 +1,7 @@
 
 /* All colors defined here */
 $color-primary-background: #002d67;
-$color-primary-shadowred:#5c6e9a;
+$color-primary-shadowred:#5c6f9b;
 $color-primary-foreground: white;
 $color-secondary-background:#eb6608;
 $color-secondary-foreground:#707173;
