--- a/styles/display.scss
+++ b/styles/display.scss
@@ -14,7 +14,7 @@ body
    
 
     /* text */
-    font-family: Futura, Arial, Helvetica, sans-serif;
+    font-family: "Frutiger VR", Arial, Helvetica, sans-serif;
 
     /* background */
     background-color: $color-common-background; 
@@ -23,7 +23,7 @@ body
 body.list
 {
     background-color: $color-primary-background;
-    font-family: Arial, Verdana, Geneva,Tahoma,sans-serif;
+    font-family: Frutiger VR Arial, Verdana, Geneva,Tahoma,sans-serif;
     margin: 0;
     display: block;
 
