--- a/styles/style.scss
+++ b/styles/style.scss
@@ -6,7 +6,7 @@
 
 html
 {
-    font-family:Arial, Verdana, Geneva,Tahoma,sans-serif;
+    font-family:"Frutiger VR", Arial, Verdana, Geneva,Tahoma,sans-serif;
     color: $color-common-foreground;
     background-color: $color-common-background;
 }
