--- a/styles/printer.scss
+++ b/styles/printer.scss
@@ -101,7 +101,7 @@ body.printer
         background-color: $color-primary-shadowred;
         color: $color-highlight-foreground;
         text-align: left;
-        font-size: 2.5em;
+        font-size: 2.3em;
         font-weight: bold;
         box-sizing: border-box;
         padding-left: 2vw;
@@ -136,7 +136,16 @@ body.printer
         {
             width: 10vw;
             margin: 8vh 0 0 43vw;
-        }         
+        } 
+        
+        #queuelist
+        {
+            
+            h2
+            {
+                font-size: 3.5em;
+            }
+        }
     }   
 
     .Todo, .Todo2
