--- a/styles/colors.scss
+++ b/styles/colors.scss
@@ -4,8 +4,7 @@ $color-primary-background: #002d67;
 $color-primary-shadowred:#5c6f9b;
 $color-primary-foreground: white;
 $color-secondary-background:#eb6608;
-$color-secondary-foreground:#707173;
-$color-secondary-shadow: #c3c3c3;
+$color-secondary-foreground:#2581C4;
 $color-primary-shadow:  #53668D;
 $color-highlight-background: red;
 $color-highlight-foreground: white;
