--- a/printer/PrinterTicket.cshtml
+++ b/printer/PrinterTicket.cshtml
@@ -27,10 +27,12 @@
 @Scripts.Render("js/jquery.qrcode.js", "js/url_polyfill.js")
 <section class="ticket">
   <header>
-  <p>HERZLICH WILLKOMMEN<br>bei Ihrer Berliner Volksbank</p>
+  <p>HERZLICH WILLKOMMEN</p>
+  <p>bei Ihrer Berliner Volksbank</p>  
   </header> 
   <div class="info">
-    <p>Machen Sie es sich kurz bequem.<br>Wir sind gleich pers&#246;nlich f&#252;r Sie da!</p>
+    <p>Machen Sie es sich kurz bequem.</p>
+    <p>Wir sind gleich pers&#246;nlich f&#252;r Sie da!</p>
     <p>Ihre Beratungs-Nr.</p>
   </div>
   <h1>
