--- a/styles/printer.scss
+++ b/styles/printer.scss
@@ -263,9 +263,10 @@ body.printer
             {
                 margin-top: 1vh;
                 a
-                {   padding: 0.5vh 1.5vw 0.5vh 1.5vw;
+                {   padding: 0.5vh 3vw 0.5vh 3vw;
                     border: 2px solid $color-primary-background;
                     border-radius: 8px;
+                    margin: 1vh 2vw 0 2vw;
                 }
 
                 a:hover
