--- a/styles/ticket.scss
+++ b/styles/ticket.scss
@@ -25,15 +25,31 @@ section.ticket
 
     background-color:white;
     color: black;
-        
+    
+
     header
     {
         text-align: center;
-        font-size: 12px;
         font-weight: bold;
-        line-height: 13px;
-        max-height: 15mm;
         width: 100%;
+        max-height: 15mm;
+        font-size: 14px;
+        line-height: 12px;
+        margin: 0;
+        padding: 5px;   
+    }
+
+    .info
+    {
+        padding: 5px;
+        margin: 0;
+    }
+     p
+    {
+        text-align: center; 
+        font-size: 12px;
+        width: 100%;
+        padding: 0;
     }
 
     h1
@@ -41,44 +57,29 @@ section.ticket
         text-align: center;
         font-size: 40px;
         color: #000;
-        margin: 0;
-    }
-
-    img
-    {
-        width: 100%;
-    }
-
-    
-    h6
-    {
-        text-align: center;
-        font-size: 12px;
-        font-weight: bold;
-        color:black;
-        width: 100%;
-        margin: 0;
-        padding: 2px;
-    }
-
-        
-     p
-    {
-        text-align: center;
-        font-size: 10px;
-        width: 100%;
-        margin: 0;
+        margin: 2px;
         padding: 5px;
-        
-    }
-
+    } 
+    
     section.qrcode
     {
         color:black;
         margin:0px;
         padding:0px;
         text-align: center;
-        font-size: 10px;  
+        font-size: 12px;  
+
+                
+        h6
+        {
+            text-align: center;
+            font-size: 12px;
+            font-weight: bold;
+            color:black;
+            width: 100%;
+            margin: 0;
+            padding: 2px;
+        }
         
     }
 
