--- a/printer/PrinterTicket.cshtml
+++ b/printer/PrinterTicket.cshtml
@@ -31,8 +31,7 @@
   <p>bei Ihrer Berliner Volksbank</p>  
   </header> 
   <div class="info">
-    <p>Machen Sie es sich kurz bequem.</p>
-    <p>Wir sind gleich pers&#246;nlich f&#252;r Sie da!</p>
+    <p>Machen Sie es sich kurz bequem. Wir sind gleich pers&#246;nlich f&#252;r Sie da!</p>
     <p>Ihre Beratungs-Nr.</p>
   </div>
   <h1>
