Warteliste Abstand Ticket Abstand
Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/printer/PrinterTicket.cshtml
+++ b/printer/PrinterTicket.cshtml
@@ -31,7 +31,7 @@
   <p>bei Ihrer Berliner Volksbank</p>  
   </header> 
   <div class="info">
-    <p>Machen Sie es sich kurz bequem.<br>Wir sind gleich pers&#246;nlich f&#252;r Sie da!</p>
+    <p>Machen Sie es sich kurz bequem.<br>Wir sind gleich pers&#246;nlich f&#252;r Sie da.</p>
     <p>Ihre Beratungs-Nr.</p>
   </div>
   <h1>
