--- a/printer/TicketDefault.cshtml
+++ b/printer/TicketDefault.cshtml
@@ -20,7 +20,7 @@
     <h5>bei Ihrer Berliner Volksbank</h5>
   </header>
   <p>Machen Sie es sich kurz bequem.<br>Wir sind gleich pers&#246;nlich f&#252;r Sie da!</p>
-  <p>Ihre Beratungs-Nr.</p> 
+  <h5>Ihre Beratungs-Nr.</h5> 
    <h1>
     @Model.Style["ticketnumber"].Value
   </h1>
