--- a/styles/ticket.scss
+++ b/styles/ticket.scss
@@ -72,8 +72,17 @@ section.ticket
             width: 100%;
             margin:1.5vh 0 0 0; 
             padding: 0px;
-           
         }
+
+        h5
+        {
+            text-align: center; 
+            font-size: 11px;
+            width: 100%;
+            margin:2vh 0 0 0; 
+            padding: 0px;
+        }
+
     }
 
     h1
