ENTF-Symbol fertig
Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/display/List3.cshtml
+++ b/display/List3.cshtml
@@ -58,7 +58,7 @@
                     </td>
                 </tr>
             }
-            @foreach (var x in waiting)
+            @foreach (var x in waiting.Take(5))
             {
                 <tr class="waiting">
                     <td class="room">&nbsp;</td>
