--- a/printer/P1_Appointment.cshtml
+++ b/printer/P1_Appointment.cshtml
@@ -66,11 +66,7 @@
         @foreach (var c in keyboard[i]) { <a role="button">@c</a> }
         @if (i == 2)
         {
-         
-            <a data-key="&#8;" role="button">
-              <img src="images/ENT_01.png" alt="Entf" class="entf"style="width:68%;height:auto;">
-            </a>
-         
+        <a data-key="&#8;" role="button" class="entf">&nbsp;</a>
         }
       </div>
     }
