Tastur- ausgerichtet rechtsbündig
Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/printer/P1_Appointment.cshtml
+++ b/printer/P1_Appointment.cshtml
@@ -71,8 +71,8 @@
       </div>
     }
     <div class="sonderzeichen">
-        <a data-key=" " role="button">Leerzeichen</a>
-        <a role="button">-</a>
+        <a data-key=" " role="button" id="space">Leerzeichen</a>
+        <a role="button"id="hyphen">-</a>
         <button id="btnOK">OK</button>
     </div>
   </div>
