change "Heute spontan hier"
Signed-off-by: Martina Findik <Martina.Findik@de-signo.de>

--- a/printer/P0_Main.cshtml
+++ b/printer/P0_Main.cshtml
@@ -21,7 +21,7 @@ Printer main entry page
 
 <nav class="site-nav">
   <a href='@Model.Navigate("P1_Appointment.cshtml")'>Ich habe<br>einen Termin</a>
-  <a href='@Model.Navigate("P1_GetTicket.cshtml")'>Heute<br>ganz spontan</a>
+  <a href='@Model.Navigate("P1_GetTicket.cshtml")'>Heute<br>spontan hier</a>
 </nav>
 
 <footer class="site-footer"></footer>
