--- a/5.0/styles/ticket.scss
+++ b/5.0/styles/ticket.scss
@@ -1,76 +1,60 @@
-
-
 /* 
  * ticket should be hidden, on screen,
  * but when print out it's the only content visible
  */
-   
-@media screen
-{ 
-    body>.print_ticket { display: none; }
+
+@media screen {
+    body>.print_ticket {
+        display: none;
+    }
 }
 
-@media print
-{
-    body>*:not(.print_ticket) { display: none !important; }
+@media print {
+    body>*:not(.print_ticket) {
+        display: none !important;
+    }
 }
 
-
-section.ticket 
-{   
+section.ticket {
     display: block;
     /* paper: 58mm, paper-margin 5mm */
     width: 48mm;
     margin: 5mm;
-
-    background-color:white;
+    background-color: white;
     color: black;
-    
-    header
-    {
+    header {
         text-align: center;
         font-size: 12px;
         line-height: 13px;
         width: 100%;
     }
-    
-    h1
-    {
+    h1 {
         text-align: center;
-        font-size: 40px;
+        font-size: 50px;
         color: #000;
         line-height: 1px;
     }
-   
-    img
-    {
+    img {
         width: 100%;
     }
-    h4
-    {
+    h4 {
         font-size: 15px;
         float: left;
         color: #000;
         margin: 1mm;
     }
-    canvas
-    {
+    canvas {
         width: 23mm;
-        margin-top: 2px; 
-       
+        margin-top: 2px;
     }
-    img.customerlogo
-    {
+    img.customerlogo {
         height: 23mm;
         width: auto;
         float: right;
         margin-top: 2px;
-    }    
-    div.abstand
-    {
+    }
+    div.abstand {
         float: right;
         width: 100%;
     }
-    }
-
-
+}
